--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -2,34 +2,16 @@
     font-weight: 500;
 
     display: inline-block;
-
     padding: .1em .5em .2em .5em;
 
     text-decoration: none;
-    &.--primary {
-        position: relative;
 
+    &.--primary {
+        
+            @extend .flash;
         color: white;
         background-color: $color-primary;
-        &:after {
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
 
-            display: block;
-            opacity: 0;
-            content: '';
-
-            background-color: rgba(255, 255, 255, .21);
-        }
-        &:hover {
-            
-            &:after{
-                @extend .flash;
-            }
-        }
     }
     &.--secondary {
         color: $color-black;
@@ -38,5 +20,6 @@
             color: white;
             background-color: $color-black;
         }
+
     }
 }
