--- a/src/scss/sections/_project.scss
+++ b/src/scss/sections/_project.scss
@@ -6,6 +6,7 @@
     .preview {
         width: 100%;
         min-height: 200px;
+        position: relative;
         margin-top: $spacing-m;
         //background-color: lightgray;
 
@@ -20,83 +21,32 @@
     .description {
         margin: $spacing-m 0;
     }
-    .button {
-        margin-bottom: .6em;
-    }
     .links {
         li {
             display: inline-block;
-
+            margin-bottom: .6em;
             margin-right: .2em;
         }
     }
 }
 
-// /*
-.favicon {
-    display: inline-block;
-
-    width: 1em;
-    height: 1em;
-    margin-right: .2em;
-    content: '';
-    transform: translate(0em, .17em) scale(0.9);
-
-    background-size: contain;
-}
-
-a[href*='9to5google'] {
-    &:before {
-        @extend .favicon;
-        background-image: url('../static/9to5google.png');
-    }
-}
-
-a[href*='news.ycombinator'] {
-    &:before {
-        @extend .favicon;
-        background-image: url('../static/hackernews.png');
-    }
-}
-
-a[href*='feber'] {
-    &:before {
-        @extend .favicon;
-        background-image: url('../static/feber.png');
-    }
-}
-
-a[href*='gizmodo'] {
-    &:before {
-        @extend .favicon;
-        background-image: url('../static/gizmodo.png');
-    }
-}
-a[href*='motherboard'] {
-    &:before {
-        @extend .favicon;
-        background-image: url('../static/motherboard.png');
-    }
-}
-a[href*='producthunt'] {
-    &:before {
-        @extend .favicon;
-        background-image: url('../static/producthunt.svg');
-    }
-}
-
-// */
-
 .project img {
     width: 100%;
+    &.mobile{
+        background-color: lightgray;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
 }
-
-
 
 .dmwtf {
     img {
-        width: 100%;
-
         border-radius: 1vw;
         box-shadow: $shadow;
     }
@@ -107,7 +57,7 @@ a[href*='producthunt'] {
 .facepause {
     video {
         display: block;
-
+        position: relative;
         width: 100%;
         //box-shadow: $shadow;
     }
@@ -127,7 +77,7 @@ a[href*='producthunt'] {
             height: calc(1000px * 9/16);
         }
     }
-    video {
+    video,  {
         position: absolute;
         top: 50%;
         left: 50%;
@@ -156,7 +106,7 @@ a[href*='producthunt'] {
         top: 50%;
         left: 50%;
 
-        padding: .2vmax 1.5vmax;
+        padding: .2vmax 1vmax;
 
         transform: translate(-50%, -50%);
         text-transform: uppercase;
